color and calc
